fixed column 2 holiday shift issue

--- a/gngmaStyle.css
+++ b/gngmaStyle.css
@@ -579,9 +579,6 @@
     width: 36.25%;
     padding: 15px;
     color:yellow;
-    position:absolute;
-    top:141px;
-    right:18px;
 }
 .column3 {
 	text-align:center;
